# very_based_interface

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
src/very_based_interface/: __about__.py  __init__.py  cli.py  memory_manager.py  types.py  vbi_file.py
tests/: __init__.py  main_test.py
